feat: implementing integration tests, fixing sonar issues