@@ -158,7 +158,7 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.20.2</version>
+            <version>${version.assertj-core}</version>
             <scope>test</scope>
         </dependency>
 
@@ -168,7 +168,7 @@
         </dependency>
         <dependency>
             <artifactId>hibernate-jpamodelgen</artifactId>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <version>6.2.0.Final</version>
             <scope>provided</scope>
         </dependency>
@@ -236,23 +236,17 @@
             <artifactId>modelmapper-spring</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj-core.version}</version>
+            <groupId>org.cardanofoundation.rosetta-java</groupId>
+            <artifactId>test-data-generator</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
-      <dependency>
-        <groupId>org.cardanofoundation.rosetta-java</groupId>
-        <artifactId>test-data-generator</artifactId>
-        <version>1.0-SNAPSHOT</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>2.2.224</version>
-        <scope>test</scope>
-      </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -377,7 +371,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>${version.maven-surefire-plugin}</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
